--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -56,7 +56,7 @@ hook_source = '''
   call ddc#custom#patch_filetype(['vim'], {
     \   'sources': ['vsnip', 'nvim-lsp', 'around']
     \ })
-  call ddc#custom#patch_filetype(['cpp', 'dart', 'typescript', 'typescriptreact'], {
+  call ddc#custom#patch_filetype(['cpp', 'dart', 'typescript', 'typescriptreact', 'rust'], {
     \   'sources': ['nvim-lsp', 'around']
     \ })
   call ddc#custom#patch_filetype(['css', 'scss'], {
@@ -163,7 +163,7 @@ on_source = 'ddc.vim'
 repo = 'neovim/nvim-lspconfig'
 on_event = 'BufReadPost'
 hook_add = '''
-  autocmd BufWritePre *.ts,*.dart lua vim.lsp.buf.formatting()
+  autocmd BufWritePre *.ts,*.dart,*.rs lua vim.lsp.buf.formatting()
   command! Format lua vim.lsp.buf.formatting_sync()
 '''
 hook_source = '''
