--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -204,13 +204,16 @@ hook_source = '''
     on_attach = on_attach,
     root_dir = util.root_pattern("package.json", "node_modules")
   }
+  nvim_lsp.rust_analyzer.setup{
+    on_attach = on_attach,
+  }
   local capabilities = vim.lsp.protocol.make_client_capabilities()
   capabilities.textDocument.completion.completionItem.snippetSupport = true
   nvim_lsp.cssls.setup{
     capabilities = capabilities,
   }
-  nvim_lsp.rust_analyzer.setup{
-    on_attach = on_attach,
+  nvim_lsp.html.setup{
+    capabilities = capabilities,
   }
   nvim_lsp.jsonls.setup{}
   nvim_lsp.omnisharp.setup{}
