--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -44,5 +44,5 @@ hook_add = '''
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
 hook_add = '''
-  let g:extra_whitespace_ignored_filetypes = ['markdown', 'defx']
+  let g:extra_whitespace_ignored_filetypes = ['markdown', 'defx', 'ddu-filer']
 '''
