--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -53,6 +53,7 @@ hook_add = '''
   let g:lexima_custom_tex = [
     \   { 'char': '$',    'input_after': '$' },
     \   { 'char': '<BS>', 'at': '\$\%#\$', 'delete': 1 },
+    \   { 'char': '<CR>', 'at': '^ *\\item.*\%#', 'input': '<CR>\item ', 'except': '\\\\\%#' },
     \ ]
   let g:lexima_custom_tag = [
     \   { 'char': '>', 'at': '<\(\w\+\)\%#', 'input_after': '</\1>', 'with_submatch': v:true },
