--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -79,33 +79,57 @@ hook_source = '''
 '''
 
 [[plugins]]
+repo = 'yuki-yano/fuzzy-motion.vim'
+on_cmd = 'FuzzyMotion'
+hook_add = '''
+ nnoremap <Leader><Space> <Cmd>FuzzyMotion<CR>
+'''
+
+[[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter'
-on_event = 'BufRead'
+on_event = 'BufEnter'
 hook_post_update = 'TSUpdate'
 hook_source = '''
 lua <<EOF
 require'nvim-treesitter.configs'.setup {
-    ensure_installed = 'all',
-    additional_vim_regex_highlighting = false,
+  ensure_installed = 'all',
+  additional_vim_regex_highlighting = false,
 
-    -- m1でエラー出るから
-    ignore_install = { 'phpdoc' },
+  -- m1でエラー出るから
+  ignore_install = { 'phpdoc' },
 
-    -- help : ハイライト変になる
-    -- tex  : snipet挿入後とかでエラーが出る
-    highlight = {
-        enable = true,
-        disable = { 'help', 'latex', 'tex' },
-    },
+  -- help : ハイライト変になる
+  -- tex  : snipet挿入後とかでエラーが出る
+  highlight = {
+    enable = true,
+    disable = { 'help', 'latex', 'tex' },
+  },
 }
 EOF
 '''
 
 [[plugins]]
-repo = 'yuki-yano/fuzzy-motion.vim'
-on_cmd = 'FuzzyMotion'
-hook_add = '''
- nnoremap <Leader><Space> <Cmd>FuzzyMotion<CR>
+repo = 'lewis6991/gitsigns.nvim'
+on_event = 'BufEnter'
+hook_source = '''
+  lua require'gitsigns'.setup()
+'''
+
+[[plugins]]
+repo = 'lukas-reineke/indent-blankline.nvim'
+on_event = 'BufEnter'
+hook_source = '''
+  highlight IndentBlanklineContextChar guifg=#6E6E6E gui=nocombine
+  lua require'indent_blankline'.setup {
+  \  show_current_context = true,
+  \ }
+'''
+
+[[plugins]]
+repo = 'norcalli/nvim-colorizer.lua'
+on_event = 'BufEnter'
+hook_source = '''
+  lua require'colorizer'.setup()
 '''
 
 [[plugins]]
