--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -80,7 +80,7 @@ repo = 'Shougo/ddc-around'
 on_source = 'ddc.vim'
 hook_source = '''
   let g:ddc_source_options['around'] = {
-    \   'mark': ' ',
+    \   'mark': '',
     \   'matchers': ['matcher_head', 'matcher_length']
     \ }
 '''
@@ -167,64 +167,59 @@ hook_add = '''
   command! Format lua vim.lsp.buf.formatting_sync()
 '''
 hook_source = '''
-  lua << EOF
-  local on_attach = function (client, bufnr)
-    local function set_keymap(...) vim.api.nvim_buf_set_keymap(bufnr, ...) end
-    local opts = { noremap=true, silent=true }
-    set_keymap('n', ';d', '<Cmd>lua vim.lsp.buf.definition()    <CR>', opts)
-    set_keymap('n', ';i', '<Cmd>lua vim.lsp.buf.implementation()<CR>', opts)
-    set_keymap('n', ';r', '<Cmd>lua vim.lsp.buf.rename()        <CR>', opts)
-    set_keymap('n', ';x', '<Cmd>lua vim.diagnostic.open_float() <CR>', opts)
-    set_keymap('n', ';l', '<Cmd>lua vim.lsp.buf.hover()         <CR>', opts)
-    set_keymap('n', ';s', '<Cmd>lua vim.lsp.buf.signature_help()<CR>', opts)
-    set_keymap('n', ';a', '<Cmd>lua vim.lsp.buf.code_action()   <CR>', opts)
-    set_keymap('n', ';f', '<Cmd>lua vim.lsp.buf.references()    <CR>', opts)
-  end
-
-  require('nvim-lsp-installer').setup({
-    automatic_installation = true
-  })
+lua << EOF
   local nvim_lsp = require('lspconfig')
+  local lsp_installer = require('nvim-lsp-installer')
   local util = require('lspconfig.util')
-  nvim_lsp.clangd.setup{on_attach = on_attach}
-  nvim_lsp.vimls.setup{on_attach = on_attach}
-  nvim_lsp.dartls.setup{
-    on_attach = on_attach,
-    root_dir = util.root_pattern("pubspec.yaml", ".dart")
-  }
-  nvim_lsp.denols.setup{
-    on_attach = on_attach,
-    init_options = {
-      lint = true,
-      unstable = true,
-    },
-    root_dir = util.root_pattern("deno.json", "deno.jsonc", "denops")
-  }
-  nvim_lsp.tsserver.setup{
-    on_attach = on_attach,
-    root_dir = util.root_pattern("package.json", "node_modules")
-  }
-  nvim_lsp.rust_analyzer.setup{
-    on_attach = on_attach,
-  }
+
+  lsp_installer.setup({
+    automatic_installation = true,
+    ui = {
+      icons = {
+        server_installed = "",
+        server_pending = "",
+        server_uninstalled = ""
+      }
+    }
+  })
+
   local capabilities = vim.lsp.protocol.make_client_capabilities()
   capabilities.textDocument.completion.completionItem.snippetSupport = true
-  nvim_lsp.cssls.setup{
-    capabilities = capabilities,
-  }
-  nvim_lsp.html.setup{
-    capabilities = capabilities,
-  }
-  nvim_lsp.jsonls.setup{}
-  nvim_lsp.omnisharp.setup{}
-  nvim_lsp.texlab.setup{}
-  nvim_lsp.taplo.setup{}
-  nvim_lsp.yamlls.setup{}
+
+  for _, server in ipairs(lsp_installer.get_installed_servers()) do
+    local server_name = server.name
+    local opts = {}
+    opts.on_attach = function(_, bufnr)
+      local function nnoremap(key, cmd) vim.api.nvim_buf_set_keymap(bufnr, 'n', key, cmd, { noremap = true, silent = true }) end
+      nnoremap(';d', '<Cmd>lua vim.lsp.buf.definition()<CR>')
+      nnoremap(';i', '<Cmd>lua vim.lsp.buf.implementation()<CR>')
+      nnoremap(';r', '<Cmd>lua vim.lsp.buf.rename()<CR>')
+      nnoremap(';x', '<Cmd>lua vim.diagnostic.open_float()<CR>')
+      nnoremap(';l', '<Cmd>lua vim.lsp.buf.hover()<CR>')
+      nnoremap(';s', '<Cmd>lua vim.lsp.buf.signature_help()<CR>')
+      nnoremap(';a', '<Cmd>lua vim.lsp.buf.code_action()<CR>')
+      nnoremap(';f', '<Cmd>lua vim.lsp.buf.references()<CR>')
+    end
+    if server_name == 'cssls' then
+      opts.capabilities = capabilities
+    elseif server_name == 'dartls' then
+      opts.root_dir = util.root_pattern('pubspec.yaml', '.dart')
+      opts.capabilities = capabilities
+    elseif server_name == 'denols' then
+      opts.init_options = { lint = true, unstable = true }
+      opts.root_dir = util.root_pattern('deno.json', 'deno.jsonc', 'denops')
+    elseif server_name == 'html' then
+      opts.capabilities = capabilities
+    elseif server_name == 'tsserver' then
+      opts.root_dir = util.root_pattern('package.json', 'node_modules')
+    end
+    nvim_lsp[server_name].setup(opts)
+  end
 EOF
 '''
 
 [[plugins]]
-repo ='williamboman/nvim-lsp-installer'
+repo = 'williamboman/nvim-lsp-installer'
 on_source = 'nvim-lspconfig'
 
 [[plugins]]
