--- a/vim/rc/filetype.toml
+++ b/vim/rc/filetype.toml
@@ -1,4 +1,6 @@
 hook_add = '''
+  " .texのからファイルはplanetexになってしまうので
+  let g:tex_flavor = 'latex'
 '''
 
 [ftplugin]
@@ -6,8 +8,6 @@ tex = '''
   setlocal tabstop=2 softtabstop=2 shiftwidth=2
   setlocal sidescrolloff=10
   setlocal foldmarker=!!!>,<!!!
-
-  "inoremap <buffer>$ $$<Left>
 
   autocmd BufWritePre *.tex :call FixPunctuation()
   function! FixPunctuation() abort
@@ -25,6 +25,7 @@ dart = '''
   setlocal tabstop=2 softtabstop=2 shiftwidth=2
 '''
 help = '''
- setlocal noexpandtab
- setlocal tabstop=8 softtabstop=8 shiftwidth=8
+  setlocal nolist
+  setlocal noexpandtab
+  setlocal tabstop=8 softtabstop=8 shiftwidth=8
 '''
