--- a/vim/rc/dap.toml
+++ b/vim/rc/dap.toml
@@ -10,8 +10,13 @@ lua << EOF
       port = '${port}',
       executable = {
         command = vim.fn.stdpath('data') .. '/mason/packages/codelldb/extension/adapter/codelldb',
-        args = {'--port', '${port}'},
+        args = {'--port', '${port}'}
       }
+    },
+    debugpy = {
+      type = 'executable',
+      command = vim.fn.stdpath('data') .. '/mason/packages/debugpy/venv/bin/python',
+      args = { '-m', 'debugpy.adapter' }
     }
   }
   dap.configurations = {
@@ -24,35 +29,75 @@ lua << EOF
           return vim.fn.input('Path to executable: ', vim.fn.getcwd() .. '/a.out', 'file')
         end,
         cwd = '${workspaceFolder}',
-        stopOnEntry = false, -- trueだとバイナリのデバッグになっちゃう(なんで?)
+        stopOnEntry = false -- trueだとバイナリのデバッグになっちゃう(なんで?)
+      }
+    },
+    python = {
+      {
+        name = 'Launch file',
+        type = 'debugpy',
+        request = 'launch',
+        program = '${file}',
+        pythonPath = vim.fn.fnamemodify('~/.pyenv/shims/python', ':p')
       }
     }
   }
-  require('dapui').setup()
 EOF
 '''
 hook_add = '''
   command! DapBegin call <SID>DapBegin()
   command! DapEnd call <SID>DapEnd()
   function! s:DapBegin() abort
-    call dein#source(['nvim-dap']) " 複数回sourceされることはない
+    call dein#source('nvim-dap') " 複数回sourceされることはない
+    let b:save_laststatus = &laststatus
+    setlocal laststatus=2
     nnoremap <silent><buffer><F4>  <Cmd>lua require'dap'.toggle_breakpoint()<CR>
     nnoremap <silent><buffer><F5>  <Cmd>lua require'dap'.continue()<CR>
     nnoremap <silent><buffer><F10> <Cmd>lua require'dap'.step_over()<CR>
     nnoremap <silent><buffer><F11> <Cmd>lua require'dap'.step_into()<CR>
     nnoremap <silent><buffer><F12> <Cmd>lua require'dap'.step_out()<CR>
     lua require'dapui'.open()
-   endfunction
-   function! s:DapEnd() abort
-     silent! nunmap <F4>
-     silent! nunmap <F5>
-     silent! nunmap <F10>
-     silent! nunmap <F11>
-     silent! nunmap <F12>
-     lua require'dapui'.close()
-   endfunction
+    nnoremap <buffer><buffer><2-LeftMouse> <Cmd>lua require'dapui'.eval()<CR>
+  endfunction
+  function! s:DapEnd() abort
+    silent! nunmap <buffer><F4>
+    silent! nunmap <buffer><F5>
+    silent! nunmap <buffer><F10>
+    silent! nunmap <buffer><F11>
+    silent! nunmap <buffer><F12>
+    silent! nunmap <buffer><LeftMouse>
+    if exists('b:save_laststatus')
+      let &laststatus = b:save_laststatus
+      unlet b:save_laststatus
+    endif
+    lua require'dapui'.close()
+  endfunction
 '''
 
 [[plugins]]
 repo = 'rcarriga/nvim-dap-ui'
 on_source = 'nvim-dap'
+hook_source = '''
+lua << EOF
+  require('dapui').setup {
+    layouts = {
+      {
+        elements = {
+          { id = 'repl', size = 0.15 },
+          { id = 'stacks', size = 0.2 },
+          { id = 'watches', size = 0.2 },
+          { id = 'scopes', size = 0.35 },
+          { id = 'breakpoints', size = 0.1 }
+        },
+        size = 0.4,
+        position = 'left'
+      },
+      {
+        elements = { 'console' },
+        size = 0.25,
+        position = 'bottom'
+      }
+    }
+  }
+EOF
+'''
