--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -178,9 +178,9 @@ lua << EOF
     automatic_installation = true,
     ui = {
       icons = {
-        package_installed = "",
-        package_pending = "",
-        package_uninstalled = ""
+        package_installed = '',
+        package_pending = '',
+        package_uninstalled = ''
       }
     }
   })
@@ -213,7 +213,7 @@ lua << EOF
         Lua = {
           runtime = { version = 'LuaJIT' },
           diagnostics = { globals = {'vim'} },
-          workspace = { library = vim.api.nvim_get_runtime_file("", true) },
+          workspace = { library = vim.api.nvim_get_runtime_file('', true) },
           telemetry = { enable = false },
         }
       }
@@ -229,7 +229,7 @@ cpp = '''
 lua << EOF
   local notify = vim.notify
   vim.notify = function(msg, ...)
-      if msg:match("warning: multiple different client offset_encodings") then
+      if msg:match('warning: multiple different client offset_encodings') then
           return
       end
       notify(msg, ...)
